<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">login</string>
    <string name="connectText">Подключиться</string>
    <string name="netMode">Сеть</string>
    <string name="bluetoothConnection">Bluetooth</string>
    <string name="networkConnectio">Сеть</string>
    <string name="connectionType">Соединение</string>
    <string name="netAddressText">Сетевой адрес устройства</string>
    <string name="netPortText">Порт устройства</string>
    <string name="btScanText">Найти доступные устройства</string>
    <string name="prefDeviceParameterSettingsTitle">Настройка параметров</string>
    <string name="prefDeviceParameterSettingsSummary">Настройка параметров устройства</string>
    <string name="prefDeviceParametersTitle">Параметры</string>
    <string name="prefDeviceParametersSummary">Установка параметров устройства</string>
    <string name="prefGraphicTitle">График</string>
    <string name="prefGraphicSummary">Параметры графика</string>
    <string name="prefGeneralTitle">Общие</string>
    <string name="prefGeneralSummary">Общие настройки</string>
    <string name="prefParameterSettings_1">Параметр 1</string>
    <string name="prefParameterSettings_2">Параметр 2</string>
    <string name="prefParameterSettings_3">Параметр 3</string>
    <string name="prefParameterSettings_4">Параметр 4</string>
    <string name="prefParameterSettings_5">Параметр 5</string>
    <string name="prefParameterSettings_6">Параметр 6</string>
    <string name="prefParameterSettings_7">Параметр 7</string>
    <string name="prefParameterSettings_8">Параметр 8</string>
    <string name="prefParameterNameFieldTitle">Наименование</string>
    <string name="prefParameterNameFieldSummary">Наименование</string>
    <string name="prefParameterMinFieldTitle">Мин. значение</string>
    <string name="prefParameterMinFieldSummary">Минимальное значение параметра</string>
    <string name="prefParameterMaxFieldTitle">Мах. значение</string>
    <string name="prefParameterMaxFieldSummary">Максимальное значение параметра</string>
    <string name="prefParameterDefaultFieldTitle">По умолчанию</string>
    <string name="prefParameterDefaultFieldSummary">Значение параметра по умолчанию</string>
    <string name="prefFlagSettings">Настройки флагов устр-ва</string>
    <string name="prefFlagNameFieldTitle">Наименование</string>
    <string name="preFlagNameFieldSummary">Наименование флага</string>
    <string name="prefFlagDefaultFieldTitle">Значение</string>
    <string name="prefFlagDefaultFieldSummary">Заначение по умолчанию</string>
    <string name="prefFlagSettings_1">Флаг 1</string>
    <string name="prefFlagSettings_2">Флаг 2</string>
    <string name="prefFlagSettings_3">Флаг 3</string>
    <string name="prefFlagSettings_4">Флаг 4</string>
    <string name="prefFlagSettings_5">Флаг 5</string>
    <string name="prefFlagSettings_6">Флаг 6</string>
    <string name="prefFlagSettings_7">Флаг 7</string>
    <string name="prefFlagSettings_8">Флаг 8</string>
</resources>
