<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:key="parameter_title"
            android:title="@string/prefParameterNameFieldTitle"
            android:summary="@string/prefParameterNameFieldSummary" />
    <EditTextPreference
            android:key="parameter_min"
            android:title="@string/prefParameterMinFieldTitle"
            android:summary="@string/prefParameterMinFieldSummary"
            android:inputType="numberDecimal"/>
    <EditTextPreference
            android:key="parameter_max"
            android:title="@string/prefParameterMaxFieldTitle"
            android:summary="@string/prefParameterMaxFieldSummary"
            android:inputType="numberDecimal"/>
    <EditTextPreference
            android:key="parameter_default"
            android:title="@string/prefParameterDefaultFieldTitle"
            android:summary="@string/prefParameterDefaultFieldSummary"
            android:inputType="numberDecimal"/>
</PreferenceScreen>
