<?xml version="1.0" encoding="utf-8"?>
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
            android:fragment="com.example.login.PrefDeviceParameterSettings"
            android:title="@string/prefDeviceParameterSettingsTitle"
            android:summary="@string/prefDeviceParameterSettingsSummary"/>
    <header
            android:fragment="com.example.login.DeviceParametersActivity"
            android:title="@string/prefDeviceParametersTitle"
            android:summary="@string/prefDeviceParametersSummary"/>
 <!--
    <header
            android:fragment="com.example.login.PrefGraphicParameters"
            android:title="@string/prefGraphicTitle"
            android:summary="@string/prefGraphicSummary"/>
    <header
            android:fragment="com.example.login.PrefGeneralParameters"
            android:title="@string/prefGeneralTitle"
            android:summary="@string/prefGeneralSummary"/>
 -->
 </preference-headers>
